--- a/libs/core/pyproject.toml
+++ b/libs/core/pyproject.toml
@@ -40,6 +40,8 @@ select = [ "E", "F", "I", "T201",]
 
 [tool.ruff.lint.per-file-ignores]
 "tests/unit_tests/prompts/test_chat.py" = ["E501"]
+"tests/unit_tests/runnables/test_runnable.py" = ["E501"]
+"tests/unit_tests/runnables/test_graph.py" = ["E501"]
 
 [tool.coverage.run]
 omit = [ "tests/*",]
