--- a/libs/partners/milvus/pyproject.toml
+++ b/libs/partners/milvus/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "langchain-milvus"
-version = "0.1.2"
+version = "0.1.1"
 description = "An integration package connecting Milvus and LangChain"
 authors = []
 readme = "README.md"
@@ -14,11 +14,14 @@ license = "MIT"
 python = ">=3.8.1,<4.0"
 langchain-core = "^0.2.0"
 pymilvus = "^2.4.3"
-# Support Python 3.8 and 3.12+.
-scipy = [
-  { version = "^1.7", python = "<3.12" },
-  { version = "^1.14", python = ">=3.12" },
-]
+
+[[tool.poetry.dependencies.scipy]]
+version = "^1.7"
+python = "<3.12"
+
+[[tool.poetry.dependencies.scipy]]
+version = "^1.9"
+python = ">=3.12"
 
 [tool.poetry.group.test]
 optional = true
