--- a/libs/community/pyproject.toml
+++ b/libs/community/pyproject.toml
@@ -35,6 +35,7 @@ aiohttp = "^3.8.3"
 tenacity = "^8.1.0,!=8.4.0"
 dataclasses-json = ">= 0.5.7, < 0.7"
 langsmith = "^0.1.0"
+azure-identity = "^1.17.1"
 [[tool.poetry.dependencies.numpy]]
 version = "^1"
 python = "<3.12"
