--- a/.github/workflows/_test_doc_imports.yml
+++ b/.github/workflows/_test_doc_imports.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install langchain editable
         run: |
-          poetry run pip install -e libs/core libs/langchain libs/community libs/experimental
+          poetry run pip install -e libs/core libs/langchain libs/community libs/experimental libs/standard-tests
 
       - name: Check doc imports
         shell: bash
