--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ ruff = "^0.5.0"
 langchain-core = { path = "libs/core/", develop = true }
 langchain-text-splitters = { path = "libs/text-splitters", develop = true }
 langchain-community = { path = "libs/community/", develop = true }
+langchain-standard-tests = { path = "libs/standard-tests/", develop = true }
 langchain = { path = "libs/langchain/", develop = true }
 langchain-experimental = { path = "libs/experimental/", develop = true }
 langchain-openai = { path = "libs/partners/openai", develop = true }
@@ -46,6 +47,7 @@ codespell = "^2.2.0"
 langchain-core = { path = "libs/core/", develop = true }
 langchain-text-splitters = { path = "libs/text-splitters", develop = true }
 langchain-community = { path = "libs/community/", develop = true }
+langchain-standard-tests = { path = "libs/standard-tests/", develop = true }
 langchain = { path = "libs/langchain/", develop = true }
 langchain-experimental = { path = "libs/experimental/", develop = true }
 langchain-openai = { path = "libs/partners/openai", develop = true }
