--- a/libs/community/pyproject.toml
+++ b/libs/community/pyproject.toml
@@ -100,6 +100,7 @@ anthropic = "^0.3.11"
 fireworks-ai = "^0.9.0"
 vdms = "^0.0.20"
 exllamav2 = "^0.0.18"
+aperturedb = ">=0.4.30"
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.5"
