--- a/libs/community/pyproject.toml
+++ b/libs/community/pyproject.toml
@@ -107,6 +107,7 @@ ruff = "^0.5"
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
 setuptools = "^67.6.1"
+azure-core = "^1.30.2"
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1.10"
