--- a/libs/community/pyproject.toml
+++ b/libs/community/pyproject.toml
@@ -35,6 +35,7 @@ aiohttp = "^3.8.3"
 tenacity = "^8.1.0,!=8.4.0"
 dataclasses-json = ">= 0.5.7, < 0.7"
 langsmith = "^0.1.0"
+
 [[tool.poetry.dependencies.numpy]]
 version = "^1"
 python = "<3.12"
@@ -100,6 +101,7 @@ anthropic = "^0.3.11"
 fireworks-ai = "^0.9.0"
 vdms = "^0.0.20"
 exllamav2 = "^0.0.18"
+pyarrow = "^17.0.0"
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.5"
