--- a/libs/partners/ollama/pyproject.toml
+++ b/libs/partners/ollama/pyproject.toml
@@ -24,6 +24,7 @@ pytest-asyncio = "^0.23.2"
 syrupy = "^4.0.2"
 pytest-socket = "^0.7.0"
 langchain-core = { path = "../../core", develop = true }
+langchain-standard-tests = {path = "../../standard-tests", develop = true}
 
 [tool.poetry.group.codespell]
 optional = true
