--- a/libs/partners/ollama/pyproject.toml
+++ b/libs/partners/ollama/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "langchain-ollama"
-version = "0.1.0"
+version = "0.1.0rc0"
 description = "An integration package connecting Ollama and LangChain"
 authors = []
 readme = "README.md"
@@ -12,8 +12,8 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
-ollama = ">=0.2.1"
-langchain-core = "^0.2.0"
+ollama = ">=0.2.1,<1"
+langchain-core = "^0.2.20"
 
 [tool.poetry.group.test]
 optional = true
@@ -24,7 +24,7 @@ pytest-asyncio = "^0.23.2"
 syrupy = "^4.0.2"
 pytest-socket = "^0.7.0"
 langchain-core = { path = "../../core", develop = true }
-langchain-standard-tests = {path = "../../standard-tests", develop = true}
+langchain-standard-tests = { path = "../../standard-tests", develop = true }
 
 [tool.poetry.group.codespell]
 optional = true
