--- a/libs/partners/pinecone/pyproject.toml
+++ b/libs/partners/pinecone/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "langchain-pinecone"
-version = "0.1.3"
+version = "0.2.0"
 description = "An integration package connecting Pinecone and LangChain"
 authors = []
 readme = "README.md"
@@ -20,8 +20,9 @@ disallow_untyped_defs = "True"
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.13"
 langchain-core = ">=0.1.52,<0.3"
-pinecone-client = ">=3.2.2,<5"
+pinecone-client = "^5.0.0"
 aiohttp = "^3.9.5"
+
 [[tool.poetry.dependencies.numpy]]
 version = "^1"
 python = "<3.12"
@@ -57,12 +58,12 @@ optional = true
 optional = true
 
 [tool.poetry.group.test.dependencies]
-pytest = "^7.3.0"
 freezegun = "^1.2.2"
 pytest-mock = "^3.10.0"
 syrupy = "^4.0.2"
 pytest-watcher = "^0.3.4"
 pytest-asyncio = "^0.21.1"
+pytest = "^8.3.1"
 
 [tool.poetry.group.codespell.dependencies]
 codespell = "^2.2.0"
