--- a/libs/partners/unstructured/pyproject.toml
+++ b/libs/partners/unstructured/pyproject.toml
@@ -92,5 +92,6 @@ addopts = "--strict-markers --strict-config --durations=5"
 # https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
 markers = [
   "compile: mark placeholder test used to compile integration tests without running them",
+  "local: mark tests as requiring a local install, which isn't compatible with CI currently",
 ]
 asyncio_mode = "auto"
