feat: rename openai to neospace

--- a/libs/partners/neospace/Makefile
+++ b/libs/partners/neospace/Makefile
@@ -20,8 +20,8 @@ test tests integration_test integration_tests:
 PYTHON_FILES=.
 MYPY_CACHE=.mypy_cache
 lint format: PYTHON_FILES=.
-lint_diff format_diff: PYTHON_FILES=$(shell git diff --relative=libs/partners/openai --name-only --diff-filter=d master | grep -E '\.py$$|\.ipynb$$')
-lint_package: PYTHON_FILES=langchain_openai
+lint_diff format_diff: PYTHON_FILES=$(shell git diff --relative=libs/partners/neospace --name-only --diff-filter=d master | grep -E '\.py$$|\.ipynb$$')
+lint_package: PYTHON_FILES=langchain_neospace
 lint_tests: PYTHON_FILES=tests
 lint_tests: MYPY_CACHE=.mypy_cache_test
 
@@ -41,7 +41,7 @@ spell_check:
 spell_fix:
 	poetry run codespell --toml pyproject.toml -w
 
-check_imports: $(shell find langchain_openai -name '*.py')
+check_imports: $(shell find langchain_neospace -name '*.py')
 	poetry run python ./scripts/check_imports.py $^
 
 ######################
