--- a/libs/partners/neospace/pyproject.toml
+++ b/libs/partners/neospace/pyproject.toml
@@ -24,7 +24,7 @@ ignore_missing_imports = true
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
 langchain-core = "^0.2.20"
-neospace = "^1.32.0"
+neospace = { file = "dist/neospace-1.37.0-py3-none-any.whl" }
 tiktoken = ">=0.7,<1"
 
 [tool.ruff.lint]
