fix lint errors

--- a/libs/community/pyproject.toml
+++ b/libs/community/pyproject.toml
@@ -329,7 +329,7 @@ build-backend = "poetry.core.masonry.api"
 #
 # https://github.com/tophat/syrupy
 # --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
-addopts = "--strict-markers --strict-config --durations=5 --snapshot-warn-unused -vv --ignore=test_sqlserver.py"
+addopts = "--strict-markers --strict-config --durations=5 --snapshot-warn-unused -vv --ignore=tests/unit_tests/vectorstores/test_sqlserver.py"
 # Registering custom markers.
 # https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
 markers = [
