--- a/libs/core/pyproject.toml
+++ b/libs/core/pyproject.toml
@@ -29,6 +29,7 @@ tenacity = "^8.1.0,!=8.4.0"
 jsonpatch = "^1.33"
 PyYAML = ">=5.3"
 packaging = ">=23.2,<25"
+typing-extensions = ">=4.7"
 [[tool.poetry.dependencies.pydantic]]
 version = ">=1,<3"
 python = "<3.12.4"
@@ -73,16 +74,19 @@ optional = true
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.5"
 
+
 [tool.poetry.group.typing.dependencies]
 mypy = "^1.10"
 types-pyyaml = "^6.0.12.2"
 types-requests = "^2.28.11.5"
 types-jinja2 = "^2.11.9"
 
+
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
 setuptools = "^67.6.1"
 grandalf = "^0.8"
+
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.0"
@@ -102,11 +106,14 @@ python = "<3.12"
 version = "^1.26.0"
 python = ">=3.12"
 
+
 [tool.poetry.group.test_integration.dependencies]
+
 
 [tool.poetry.group.typing.dependencies.langchain-text-splitters]
 path = "../text-splitters"
 develop = true
+
 
 [tool.poetry.group.test.dependencies.langchain-standard-tests]
 path = "../standard-tests"
