--- a/libs/partners/neospace/pyproject.toml
+++ b/libs/partners/neospace/pyproject.toml
@@ -24,8 +24,8 @@ ignore_missing_imports = true
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
 langchain-core = "^0.2.20"
-neospace = { file = "dist/neospace-1.37.0-py3-none-any.whl" }
 tiktoken = ">=0.7,<1"
+neospace = {url = "https://github.com/neospace-ai/neospace-python/releases/download/v1.0.0-MTuBbe5M/neospace-1.37.0-py3-none-any.whl"}
 
 [tool.ruff.lint]
 select = [ "E", "F", "I", "T201",]
