--- a/docs/api_reference/requirements.txt
+++ b/docs/api_reference/requirements.txt
@@ -3,15 +3,14 @@
 -e libs/core
 -e libs/community
 pydantic<2
-autodoc_pydantic==1.8.0
+autodoc_pydantic
 myst_parser
-nbsphinx==0.8.9
+nbsphinx
 sphinx>=5
-sphinx-autobuild==2021.3.14
-sphinx_rtd_theme==1.0.0
-sphinx-typlog-theme==0.8.0
+sphinx-autobuild
+sphinx-typlog-theme
 sphinx-panels
 toml
 myst_nb
 sphinx_copybutton
-pydata-sphinx-theme==0.13.1
+pydata-sphinx-theme
