--- a/libs/partners/couchbase/pyproject.toml
+++ b/libs/partners/couchbase/pyproject.toml
@@ -58,7 +58,6 @@ pytest = "^7.4.3"
 pytest-asyncio = "^0.23.2"
 pytest-socket = "^0.7.0"
 syrupy = "^4.0.2"
-gigachain = "^0.2.9"
 
 [tool.poetry.group.codespell.dependencies]
 codespell = "^2.2.6"
@@ -73,6 +72,10 @@ mypy = "^1.10"
 
 [tool.poetry.group.test.dependencies.gigachain-core]
 path = "../../core"
+develop = true
+
+[tool.poetry.group.test.dependencies.gigachain]
+path = "../../langchain"
 develop = true
 
 [tool.poetry.group.dev.dependencies.gigachain-core]
