--- a/libs/partners/chroma/pyproject.toml
+++ b/libs/partners/chroma/pyproject.toml
@@ -43,7 +43,7 @@ addopts = " --strict-markers --strict-config --durations=5"
 markers = [ "requires: mark tests as requiring a specific library", "asyncio: mark tests as requiring asyncio", "compile: mark placeholder test used to compile integration tests without running them",]
 
 [tool.poetry.dependencies.chromadb]
-version = ">=0.4.0,<0.6.0"
+version = ">=0.4.0,<=0.5.0"
 
 [tool.poetry.dependencies.fastapi]
 version = ">=0.95.2,<1"
