--- a/libs/partners/exa/pyproject.toml
+++ b/libs/partners/exa/pyproject.toml
@@ -24,7 +24,7 @@ disallow_untyped_defs = "True"
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
 gigachain-core = ">=0.1.52,<0.3"
-exa-py = "1.0.9"
+exa-py = "^1.0.8"
 
 [tool.ruff.lint]
 select = [ "E", "F", "I", "T201",]
