--- a/docs/api_reference/requirements.txt
+++ b/docs/api_reference/requirements.txt
@@ -1,16 +1,6 @@
--e libs/experimental
--e libs/langchain
--e libs/core
--e libs/community
-pydantic<2
-autodoc_pydantic
-myst_parser
-nbsphinx
-sphinx>=5
-sphinx-autobuild
-sphinx-typlog-theme
-sphinx-panels
-toml
-myst_nb
-sphinx_copybutton
-pydata-sphinx-theme
+autodoc_pydantic>=1,<2
+sphinx>=7,<8
+myst-parser>=3,<4
+sphinx-autobuild>=2021,<2024
+pydata-sphinx-theme>=0.14,<0.15
+toml>=0.10.2,<0.11
