--- a/docs/Makefile
+++ b/docs/Makefile
@@ -83,7 +83,7 @@ vercel-build: install-vercel-deps build generate-references
 	rm -rf build
 	mkdir static/api_reference
 	git clone --depth=1 https://github.com/baskaryan/langchain-api-docs-build.git
-	mv -r langchain-api-docs-build/api_reference_build/html/* static/api_reference/
+	mv langchain-api-docs-build/api_reference_build/html/* static/api_reference/
 	rm -rf langchain-api-docs-build
 	yarn run docusaurus build
 	mv build v0.2
