--- a/libs/core/pyproject.toml
+++ b/libs/core/pyproject.toml
@@ -30,14 +30,7 @@ jsonpatch = "^1.33"
 PyYAML = ">=5.3"
 packaging = ">=23.2,<25"
 typing-extensions = ">=4.7"
-[[tool.poetry.dependencies.pydantic]]
-version = ">=1,<3"
-python = "<3.12.4"
-
-[[tool.poetry.dependencies.pydantic]]
-version = "^2.7.4"
-python = ">=3.12.4"
-
+pydantic = "^2"
 [tool.poetry.extras]
 
 [tool.ruff.lint]
@@ -74,16 +67,19 @@ optional = true
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.5"
 
+
 [tool.poetry.group.typing.dependencies]
 mypy = ">=1.10,<1.11"
 types-pyyaml = "^6.0.12.2"
 types-requests = "^2.28.11.5"
 types-jinja2 = "^2.11.9"
 
+
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
 setuptools = "^67.6.1"
 grandalf = "^0.8"
+
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.0"
@@ -103,11 +99,14 @@ python = "<3.12"
 version = "^1.26.0"
 python = ">=3.12"
 
+
 [tool.poetry.group.test_integration.dependencies]
+
 
 [tool.poetry.group.typing.dependencies.langchain-text-splitters]
 path = "../text-splitters"
 develop = true
+
 
 [tool.poetry.group.test.dependencies.langchain-standard-tests]
 path = "../standard-tests"
