--- a/libs/standard-tests/pyproject.toml
+++ b/libs/standard-tests/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "langchain-standard-tests"
-version = "0.1.1"
+version = "0.3.0rc0"
 description = "Standard tests for LangChain implementations"
 authors = ["Erick Friis <erick@langchain.dev>"]
 readme = "README.md"
@@ -12,7 +12,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
-langchain-core = ">=0.1.40,<0.3"
+langchain-core = "^0.3.0rc0"
 pytest = ">=7,<9"
 httpx = "^0.27.0"
 
@@ -46,10 +46,10 @@ langchain-core = { path = "../core", develop = true }
 
 [tool.ruff.lint]
 select = [
-    "E",    # pycodestyle
-    "F",    # pyflakes
-    "I",    # isort
-    "T201", # print
+  "E",    # pycodestyle
+  "F",    # pyflakes
+  "I",    # isort
+  "T201", # print
 ]
 
 [tool.mypy]
@@ -81,4 +81,3 @@ markers = [
   "compile: mark placeholder test used to compile integration tests without running them",
 ]
 asyncio_mode = "auto"
-
