--- a/libs/core/pyproject.toml
+++ b/libs/core/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "langchain-core"
-version = "0.3.0rc0"
+version = "0.3.0.dev0"
 description = "Building applications with LLMs through composability"
 authors = []
 license = "MIT"
