--- a/libs/standard-tests/pyproject.toml
+++ b/libs/standard-tests/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "langchain-standard-tests"
-version = "0.3.0rc0"
+version = "0.3.0.dev0"
 description = "Standard tests for LangChain implementations"
 authors = ["Erick Friis <erick@langchain.dev>"]
 readme = "README.md"
@@ -12,7 +12,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
-langchain-core = "^0.3.0rc0"
+langchain-core = "^0.3.0.dev0"
 pytest = ">=7,<9"
 httpx = "^0.27.0"
 
