--- a/libs/text-splitters/pyproject.toml
+++ b/libs/text-splitters/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "langchain-text-splitters"
-version = "0.3.0rc0"
+version = "0.3.0.dev0"
 description = "LangChain text splitting utilities"
 authors = []
 license = "MIT"
@@ -30,7 +30,7 @@ ignore_missing_imports = "True"
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
-langchain-core = "^0.3.0rc0"
+langchain-core = "^0.3.0.dev0"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "T201"]
