--- a/docs/api_reference/requirements.txt
+++ b/docs/api_reference/requirements.txt
@@ -1,7 +1,7 @@
 autodoc_pydantic>=1,<2
-sphinx>=7,<8
-myst-parser>=3,<4
-sphinx-autobuild>=2021,<2024
-pydata-sphinx-theme>=0.14,<0.15
-toml>=0.10.2,<0.11
-myst-nb>=1.1.1,<2
+sphinx>8
+myst-parser>=3
+sphinx-autobuild>=2024
+pydata-sphinx-theme>=0.15
+toml>=0.10.2
+myst-nb>=1.1.1
