--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -81,6 +81,14 @@
     {
       "source": "/v0.2/docs/integrations/toolkits/airbyte_structured_qa/",
       "destination": "/v0.2/docs/integrations/document_loaders/airbyte/"
+    },
+    {
+      "source": "/v0.2/docs/integrations/tools/connery_toolkit",
+      "destination": "/v0.2/docs/integrations/tools/connery"
+    },
+    {
+      "source": "/v0.2/docs/integrations/tools/polygon_toolkit",
+      "destination": "/v0.2/docs/integrations/tools/polygon"
     }
   ]
 }
