--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -85,6 +85,10 @@
     {
       "source": "/v0.2/docs/integrations/toolkits/:path(.*/?)*",
       "destination": "/v0.2/docs/integrations/tools/:path*"
+    },
+    {
+      "source": "v0.2/api_reference/",
+      "destination": "/v0.2/api_reference/index.html"
     }
   ]
 }
