--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,7 @@ docs/api_reference/*/
 !docs/api_reference/templates/
 !docs/api_reference/themes/
 !docs/api_reference/_extensions/
+!docs/api_reference/scripts/
 docs/docs/build
 docs/docs/node_modules
 docs/docs/yarn.lock
