--- a/libs/partners/databricks/pyproject.toml
+++ b/libs/partners/databricks/pyproject.toml
@@ -14,6 +14,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
 langchain-core = "^0.2.0"
+mlflow = ">=2.9"
 
 [tool.poetry.group.test]
 optional = true
