--- a/libs/partners/databricks/pyproject.toml
+++ b/libs/partners/databricks/pyproject.toml
@@ -15,6 +15,10 @@ license = "MIT"
 python = ">=3.8.1,<4.0"
 langchain-core = "^0.2.0"
 mlflow = ">=2.9"
+numpy = [
+    {version = ">=1.26.0", python = ">=3.12"},
+    {version = ">=1.24.0", python = "<3.12"},
+]
 
 [tool.poetry.group.test]
 optional = true
