--- a/libs/partners/databricks/pyproject.toml
+++ b/libs/partners/databricks/pyproject.toml
@@ -12,7 +12,8 @@ license = "MIT"
 "Release Notes" = "https://github.com/langchain-ai/langchain/releases?q=tag%3A%22databricks%3D%3D0%22&expanded=true"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<4.0"
+# TODO: Replace <3.12 to <4.0 once https://github.com/mlflow/mlflow/commit/04370119fcc1b2ccdbcd9a50198ab00566d58cd2 is released
+python = ">=3.8.1,<3.12"
 langchain-core = "^0.2.0"
 mlflow = ">=2.9"
 
